# Job-Radar_2

./: .cursorrules  .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_OVERRIDES.md  CLAUDE.md  Claude.md  DECISIONS.md  MULTI_AGENT_BUILD_SYSTEM_SPEC.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  THIRD_PARTY_CODE.md  docker-compose.dev.yml  docker-compose.yml  jobradar_context_summary.md  jobradar_phase7a_architecture.md  jobradar_phase7a_implementation.md  package.json  requirements-dev.txt  research-claude.md  research-openai.md  research-perplexity.md  research_r1_orchestration_frameworks.md  research_r2_mcp_servers.md  research_r3_claude_skills.md  skills-lock.json  ui-prototype.jsx
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  database.py  main.py  models.py  pip-audit-policy.json  pyproject.toml  requirements.txt  scheduler.py  schemas.py  seed_data.py  start-dev.cjs
backend/adapters/: __init__.py  ats_detector.py  job_filter.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/admin/: router.py  service.py
backend/app/analytics/: models.py  pattern_detector.py  predictor.py  rag.py  router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/auto_apply/: ats_detector.py  ats_filler.py  employers.yaml  engine.py  field_mapper.py  form_extractor.py  form_learning.py  greenhouse_adapter.py  lever_adapter.py  models.py  orchestrator.py  portal_config.py  question_engine.py  router.py  safety.py  schemas.py  service.py  validator.py  workday_adapter.py  workday_filler.py
backend/app/canonical_jobs/: models.py  router.py  schemas.py  service.py
backend/app/companies/: models.py  router.py  schemas.py  service.py
backend/app/copilot/: models.py  prompts.py  router.py  schemas.py  service.py
backend/app/email/: gmail_sync.py  inbound.py  models.py  parser.py  router.py  schemas.py  service.py
backend/app/enrichment/: embedding.py  freshness.py  gpu_accelerator.py  hybrid_router.py  llm_client.py  router.py  service.py  tfidf.py
backend/app/followup/: models.py
backend/app/integrations/: __init__.py  gmail_client.py  google_oauth.py
backend/app/interview/: evaluator.py  models.py  prompts.py  (+4 more)
backend/auto_apply/: __init__.py  ats_filler.py  orchestrator.py  profile.py  workday_filler.py
backend/enrichment/: CONTEXT.md  deduplicator.py  embedding.py  llm_enricher.py
backend/nlp/: __init__.py  core.py  cover_letter.py  gap_analyzer.py  interview_prep.py  resume_tailor.py  tfidf_scorer.py
backend/phase7a/: __init__.py  constants.py  id_utils.py  m1_migrations.py  m1_models.py  m1_service.py  m2_engine.py  m2_migrations.py  m2_models.py  m2_rules.py  m3_migrations.py  m3_models.py  m3_service.py  m4_migrations.py  m4_models.py  m4_service.py  m5_migrations.py  m5_models.py  m5_service.py  migration.py
backend/resume/: __init__.py  council.py  document_manager.py  parser.py
backend/routers/: CONTEXT.md  auto_apply.py  copilot.py  jobs.py  resume.py  scraper.py  search.py  settings.py  stats.py
backend/scrapers/: CONTEXT.md  apify_scraper.py  ashby_scraper.py  base.py  greenhouse_scraper.py  jobspy_scraper.py  lever_scraper.py  rate_limiter.py  serpapi_scraper.py  theirstack_scraper.py
backend/scripts/: import_h1b_targets.py  probe_unknown_targets.py
backend/tests/: README.md  conftest.py
(+1292 files in other folders)
