[project]
name = "jobradar-v2"
version = "0.1.0"
description = "AI-powered job hunting assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "arq>=0.25.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "apscheduler>=3.10.0",
    "sse-starlette>=2.0.0",
    "playwright>=1.44.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
